--- a/style.css
+++ b/style.css
@@ -104,7 +104,7 @@ main:before {
   height: 100%;
   background-image: url("../../assets/body-bg2.jpg");
   background-repeat: repeat-y;
-  background-size: 100% 100vh;
+  background-size: 100% 120vh;
   background-position: left top;
   filter: brightness(0.5);
 }
@@ -134,14 +134,14 @@ main section#biography .biography-content .biography-bg1 {
   background: url("../../assets/biographie.jpg") center no-repeat;
   background-size: cover;
   float: right;
-  margin: 2rem 0 2rem 2rem;
+  margin: 0 0 2rem 2rem;
 }
 main section#biography .biography-content .biography-bg2 {
   background: url("../../assets//biographie2.jpg") center no-repeat;
   background-size: cover;
   float: left;
   padding: 1rem 0 1rem;
-  margin: 2rem 2rem 2rem 0;
+  margin: 0 2rem 2rem 0;
 }
 main section#personnality {
   background: unset;
@@ -156,8 +156,13 @@ main section#personnality .background {
 main section#personnality .personnality-content {
   max-width: 50%;
 }
+main section#skills h2 {
+  text-align: center;
+}
 main section#skills p {
   text-align: center;
+  max-width: 50%;
+  margin: 1rem auto;
 }
 main section#skills iframe {
   margin: 1.5rem auto;
